impl: Added support for sampler objects misc: updated deprecation and support for ShadeState, added partial documentations downgraded to Java 8 for a more wide-range support